# check-conventional-commits

./: .bumpversion.cfg  .pre-commit-config.yaml  README.rst  check_conventional_commits.py  pyproject.toml
