[tool.poetry]
name = "check-conventional-commits"
version = "0.0.1"
description = "Linting commit message is based on conventional commits"
authors = ["Kazuya Takei <myself@attakei.net>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.9 | ^3.10"

[tool.poetry.dev-dependencies]
pre-commit = "^2.16.0"

[tool.poetry.scripts]
check-conventional-commits = "check_conventional_commits:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
